@@ -296,21 +296,21 @@ StatusCode PUBLIC_API CLBlastDzasum(const size_t n,
                                    const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
                                    cl_command_queue* queue, cl_event* event);
 
-// Sum of values in a vector: SSUM/DSUM/ScSUM/DzSUM
+// Sum of values in a vector (non-BLAS function): SSUM/DSUM/ScSUM/DzSUM
 StatusCode PUBLIC_API CLBlastSsum(const size_t n,
-                                  cl_mem asum_buffer, const size_t asum_offset,
+                                  cl_mem sum_buffer, const size_t sum_offset,
                                   const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
                                   cl_command_queue* queue, cl_event* event);
 StatusCode PUBLIC_API CLBlastDsum(const size_t n,
-                                  cl_mem asum_buffer, const size_t asum_offset,
+                                  cl_mem sum_buffer, const size_t sum_offset,
                                   const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
                                   cl_command_queue* queue, cl_event* event);
 StatusCode PUBLIC_API CLBlastScsum(const size_t n,
-                                  cl_mem asum_buffer, const size_t asum_offset,
+                                  cl_mem sum_buffer, const size_t sum_offset,
                                   const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
                                   cl_command_queue* queue, cl_event* event);
 StatusCode PUBLIC_API CLBlastDzsum(const size_t n,
-                                  cl_mem asum_buffer, const size_t asum_offset,
+                                  cl_mem sum_buffer, const size_t sum_offset,
                                   const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
                                   cl_command_queue* queue, cl_event* event);
 
@@ -332,7 +332,7 @@ StatusCode PUBLIC_API CLBlastiZamax(const size_t n,
                                    const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
                                    cl_command_queue* queue, cl_event* event);
 
-// Index of maximum value in a vector: iSMAX/iDMAX/iCMAX/iZMAX
+// Index of maximum value in a vector (non-BLAS function): iSMAX/iDMAX/iCMAX/iZMAX
 StatusCode PUBLIC_API CLBlastiSmax(const size_t n,
                                   cl_mem imax_buffer, const size_t imax_offset,
                                   const cl_mem x_buffer, const size_t x_offset, const size_t x_inc,
