@@ -40,6 +40,7 @@ R"(
   typedef float16 real16;
   #define ZERO 0.0f
   #define ONE 1.0f
+  #define SMALLEST -1.0e37f
 
 // Double-precision 
 #elif PRECISION == 64
@@ -50,6 +51,7 @@ R"(
   typedef double16 real16;
   #define ZERO 0.0
   #define ONE 1.0
+  #define SMALLEST -1.0e37
 
 // Complex single-precision
 #elif PRECISION == 3232
@@ -64,6 +66,7 @@ R"(
                            real sC; real sD; real sE; real sF;} real16;
   #define ZERO 0.0f
   #define ONE 1.0f
+  #define SMALLEST -1.0e37f
 
 // Complex Double-precision
 #elif PRECISION == 6464
@@ -78,6 +81,7 @@ R"(
                             real sC; real sD; real sE; real sF;} real16;
   #define ZERO 0.0
   #define ONE 1.0
+  #define SMALLEST -1.0e37
 #endif
 
 // Single-element version of a complex number
